<resources>
    <string name="app_name">Gamefly</string>
    <string name="action_settings">Settings</string>
    <string name="search_game">search</string>
    <string name="download_finish">Finish</string>
    <string name="download_game">Download</string>
    <string name="download_ing">Downloading</string>
    <string name="download_install">Installed</string>
    <string name="download_detail">Download detail</string>
    <string name="download_wait">Waiting</string>
    <string name="download_err">Error</string>
    <string name="download_pause">Pause</string>
    <string name="update">Upgrade</string>
    <string name="confirm_delete">confirm delete？</string>
    <string name="confrim">Confirm</string>
    <string name="reject">Cancle</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="game_detail">Game Detail</string>
    <string name="game_size">Size: %s</string>
    <string name="game_intro">Intro: %s</string>
    <string name="game_update">Update: %s</string>
    <string name="game_down_number">DownLoad:%s</string>
    <string name="New_recommendation">New recommendation</string>

</resources>
