<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20dp"
        android:background="@drawable/round_line_white_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/_25dp"
            android:paddingTop="@dimen/_20dp"
            android:text="@string/confirm_delete"
            android:textColor="#333333"
            android:textSize="@dimen/_14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1px"
            android:background="@color/_e5e5e5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_5dp"
            android:paddingLeft="@dimen/_5dp"
            android:paddingRight="@dimen/_5dp">

            <TextView
                android:id="@+id/ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/confrim"
                android:textColor="#0080fc"
                android:textSize="@dimen/_14sp" />

            <View
                android:layout_width="@dimen/_1px"
                android:layout_height="match_parent"
                android:background="@color/_e5e5e5" />

            <TextView
                android:id="@+id/cancle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/reject"
                android:textColor="#0080fc"
                android:textSize="@dimen/_14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>